--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,75 +1,54 @@
 <html>
-	<script src="./fili.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
+
 	<p>hello world!</p>
-
-	<canvas id="myChart"></canvas>
-
-	<p>Passing data to HTML:</p>
-	<p><%= data %></p>
+	<div style="overflow-x:scroll;overflow-y:hidden;">
+		<div id="chartStyle" style="width:10000px !important;height:600px !important;">
+			<canvas id="heartRate"></canvas>
+		</div>
+	</div>
 	
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.0/Chart.min.js"></script>
 	<script>
-		//  Instance of a filter coefficient calculator
-		var iirCalculator = new Fili.CalcCascades();
 
-		// get available filters
-		var availableFilters = iirCalculator.available();
+		console.log(<%= time %>)
+		console.log(<%= heart %>);
+		console.log(<%= respiration %>);
+		console.log(<%= spo2 %>);
 
-		// calculate filter coefficients
-		var iirFilterCoeffs = iirCalculator.lowpass({
-			order: 3, // cascade 3 biquad filters (max: 12)
-			characteristic: 'butterworth',
-			Fs: 1000, // sampling frequency
-			Fc: 100, // cutoff frequency / center frequency for bandpass, bandstop, peak
-			BW: 1, // bandwidth only for bandstop and bandpass filters - optional
-			gain: 0, // gain for peak, lowshelf and highshelf
-			preGain: false // adds one constant multiplication for highpass and lowpass
-			// k = (1 + cos(omega)) * 0.5 / k = 1 with preGain == false
-		  });
-
-		// create a filter instance from the calculated coeffs
-		var iirFilter = new Fili.IirFilter(iirFilterCoeffs);
-		
-		// run the filter with 10 samples from a ramp
-		// returns single value
-		for (var cnt = 0; cnt < 10; cnt++) {
-		  console.log(iirFilter.singleStep(cnt));
-		}
-
-		// run the filter from input array
-		// returns array
-		console.log(iirFilter.multiStep([1,10,-5,3,1.112,17]));
-
-		// simulate the filter
-		// does not change the internal state
-		// returns array
-		console.log(iirFilter.simulate([-3,-2,-1,5,6,33]));
-		
-
-		var data = iirFilter.multiStep([1,1,1,1,1,1,1,1,1,1,1,1,1]);
+		var data = <%= heart %>;
 		var labels = [];
-		for(var i = 0; i < data.length; i++)
-		{
-			labels.push(' ');
+		for(var i = 0; i < data.length; i++) {
+			labels.push(i);
 		}
 		
-		var ctx = document.getElementById('myChart').getContext('2d');
+		var ctx = document.getElementById('heartRate').getContext('2d');
 		var myLineChart = new Chart(ctx, {
 			type: 'line',
 			data: {
 				labels: labels,
 				datasets: [{
-					label: "My First dataset",
+					label: "Filtered signal for heart rate",
 					borderColor: 'rgb(255, 99, 132)',
 					data: data,
 				}]
 			},
 			options: {
+				responsive: true,
+				maintainAspectRatio: false,
 				elements: {
 					line: {
 						tension: 0, // disables bezier curves
 					}
-				}
+				},
+				scales: {
+                    yAxes: [{
+                            display: true,
+                            ticks: {
+                                max: 200,//220000,
+                                min: -200//215000
+                            }
+                        }]
+                },
 			}
 		});
 	</script>
